# SPDX-FileCopyrightText: 2025 Nicolas Pelletier
# SPDX-License-Identifier: BSD-2-Clause
[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aletheia"
version = "1.1.1"
description = "Formally verified CAN frame analysis with LTL"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Nicolas Pelletier"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
# The core package has no runtime dependencies outside the standard library —
# the Agda-compiled Haskell shared library is loaded via ``ctypes`` at import
# time, and ``dbc_to_json`` runs end-to-end through the verified Agda parser
# (no third-party Python deps). Optional extras gate the CAN log reader
# (python-can), YAML rule loader (pyyaml), and Excel rule loader (openpyxl).
# Install with:
#   pip install aletheia               # core only (Agda DBC parser included)
#   pip install aletheia[can]          # + CAN log reader
#   pip install aletheia[yaml]         # + YAML rule loader
#   pip install aletheia[excel]        # + Excel rule/DBC loader
#   pip install aletheia[all]          # everything
dependencies = []

[project.scripts]
aletheia = "aletheia.cli:main"

[tool.setuptools.packages.find]
# Exact package list — ``aletheia*`` also matched stray top-level helpers when
# the project briefly had scratch modules at the repo root; pin to the real
# package and its subpackages to make the wheel contents reproducible.
include = ["aletheia", "aletheia.*"]

[tool.setuptools.package-data]
# Only ``py.typed`` today (PEP 561 type-disclosure marker). Rule for future
# additions: any non-``.py`` resource shipped inside the wheel (JSON schemas,
# DBC templates, example config) MUST be listed here explicitly — setuptools
# does NOT pick up data files automatically under
# ``[tool.setuptools.packages.find]``. Add the pattern here AND verify the
# file appears inside ``dist/aletheia-*.whl`` via ``python -m zipfile -l``.
aletheia = ["py.typed", "*.pyi"]

[project.optional-dependencies]
can = ["python-can>=4.0"]
yaml = ["pyyaml>=6.0.3"]
excel = ["openpyxl>=3.1.5"]
# Self-reference the individual extras so version pins live in exactly one
# place (SSOT). Editing can/yaml/excel above automatically flows through
# to ``aletheia[all]`` without manual string duplication.
all = ["aletheia[can,yaml,excel]"]
dev = [
    "aletheia[all]",
    # Upper bounds guard against the next major — AGENTS.md hard-gates the
    # review cycle on pylint 10.00/10 and basedpyright 0/0/0, so a breaking
    # major release would silently regress CI.  Bump the upper bound
    # (and re-verify the gates) on a new major rather than floating.
    #
    # Gate mapping (which upper bound protects which CI check):
    #   pylint<5              — protects the ``pylint aletheia/`` 10.00/10 gate
    #   basedpyright<2        — protects the ``basedpyright aletheia/`` 0/0/0 gate
    #   ruff<0.16             — protects the ``ruff check`` / ``ruff format`` (select=ALL)
    #                           gate; ruff is pre-1.0 so new lint rules land in minor
    #                           bumps — hence a minor-level upper bound, not major-level
    #   pytest<10             — protects the ``pytest tests/`` exit code
    #   pytest-cov<8          — protects coverage report shape (AGENTS.md R/N)
    #   pytest-markdown-docs<1 — protects the AGENTS.md Cat 32 doc-example gate
    #                             (repo-root ``conftest.py`` injects globals / loader
    #                             fakes so every ``python`` fence across README /
    #                             docs/** runs end-to-end against the real FFI).
    "pytest>=9,<10",
    "pytest-cov>=7.1.0,<8",
    "pytest-markdown-docs>=0.9.2,<1",
    # AGENTS.md Python cat 14(f) (NEW R18) requires test-isolation runs via
    # ``pytest --random-order --random-order-bucket=package`` alongside the
    # deterministic lane.  Both must stay green.
    "pytest-random-order>=1.1,<2",
    # AGENTS.md Python cat 34(b) (NEW R18) — hypothesis-driven property
    # tests for every wire-format encode/decode pair.  Profiles pinned in
    # ``python/tests/conftest.py`` (CI ``max_examples=200``, dev ``=20``).
    "hypothesis>=6.0,<7",
    "pylint>=4.0.5,<5",
    "basedpyright>=1.0,<2",
    # ruff drives the ruff(ALL) lint + format gate; minor-level pin (pre-1.0,
    # new rules land in minor bumps) per the gate mapping above.  Bumped to 0.15
    # for STABLE py314 lint-target support (0.13.x had it preview-only).
    "ruff>=0.15,<0.16",
    # AGENTS.md Python cat 25 long-run sub-check (NEW R18) — psutil drives
    # ``python/benchmarks/stability.py`` (RSS, num_fds).  Keep in [dev] so the
    # stability harness runs without an extra extras flag; the harness is
    # opt-in via ``ALETHEIA_STABILITY_CHECK=1`` so the dependency only
    # surfaces in dev environments.
    "psutil>=7.2.2,<8",
    # clang-format drives the C++ ``clang-format --dry-run --Werror`` gate.
    # Pinned TIGHTER than the major-level bounds above (>=19.1.7,<19.2, not <20):
    # clang-format output is version-specific — trailing-return signatures
    # (``auto f(params) -> T``) wrap differently across 18/19, and the *system*
    # clang-format on CI runners is whatever update-alternatives happens to
    # select (often NOT the version apt installs).  Pinning the pip binary makes
    # the gate byte-identical on every contributor + CI; run_ci routes the gate
    # through ``python/.venv/bin/clang-format`` rather than a bare PATH lookup.
    "clang-format>=19.1.7,<19.2",
]
# AGENTS.md Python cat 34(c) (NEW R18) opt-in fuzz extras.  Atheris is a
# 35 MB native binary, so it lives in its own group rather than ``[dev]``;
# only the fuzz lane installs it.  Hypothesis stays in ``[dev]`` because
# property tests run in every standard pytest invocation.
fuzz = ["atheris>=3.0,<4"]
# AGENTS.md Python cat 14(g) (NEW R18) opt-in mutation-testing extras.  mutmut
# is the AGENTS.md-named first-choice tool; pinned to 3.x where the cli +
# pyproject ``[tool.mutmut]`` config still works.  Lives in its own group
# rather than ``[dev]`` because the lane is opt-in only (per AGENTS.md "once
# per PR is sufficient; per-commit is overkill") and pulls a sizeable mutation
# trampoline machinery + tooling deps.
mutation = ["mutmut>=3.5,<4"]

[tool.basedpyright]
# Strict type checking for code we control
typeCheckingMode = "strict"
# Pin the target Python explicitly (matches requires-python).  basedpyright does
# NOT reliably infer 3.14 from the venv, and without this it rejects PEP 758
# unparenthesized ``except A, B`` syntax (which ruff's py314 formatter emits).
pythonVersion = "3.14"
stubPath = "stubs"
# Resolve imports against the project venv at ``python/.venv`` (the venv CI
# creates and runs pytest from).  venvPath is relative to this config's
# directory (``python/``), so ``.`` + ``.venv`` -> ``python/.venv``.  It was
# previously ``..`` -> ``<repo_root>/.venv``, which exists as a stray venv on
# some dev machines (masking the bug) but NOT on CI, where basedpyright then
# fell back to a pytest-less interpreter and failed with reportMissingImports
# on ``pytest`` across tests/.
venvPath = "."
venv = ".venv"
reportUnknownMemberType = "error"
reportUnknownArgumentType = "error"
reportUnknownVariableType = "error"
reportExplicitAny = "error"  # Force explicit structure definitions instead of Any
reportPrivateUsage = "error"  # Disallow accessing private members
reportMissingModuleSource = false  # _install_config.py is generated at install time
reportImplicitStringConcatenation = "error"  # Require explicit + for string concatenation

# tools/ lives at the repository root (one level up from this config) and its
# scripts import siblings as ``from tools.X import ...`` -- the package is run
# as ``python -m tools.X`` (see tools/__init__.py).  Add the repo root to the
# import search path for files under ../tools so basedpyright resolves those
# intra-package imports; the strict typeCheckingMode above is inherited.
[[tool.basedpyright.executionEnvironments]]
root = "../tools"
extraPaths = [".."]

# Tests under ``tests/`` may import the repo-root ``tools`` package (e.g. the
# Agda open-grammar regression test imports ``tools._agda_opens``).  Like the
# ../tools env above, add the repo root (``..``) so basedpyright resolves those
# imports; ``.`` keeps ``aletheia`` and the in-tests siblings (``_canonical_dbc``)
# resolvable under this environment.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["..", "."]

# The example demos under ../examples/demo run as scripts (``python
# examples/demo/demo.py``), so they import their siblings as bare modules
# (``import drive_log`` / ``from engine_ecu_sim import ...``).  Add the demo
# directory itself to the search path so basedpyright resolves those sibling
# imports; ``aletheia`` still resolves via the project root.  Pure import-path
# resolution (mirrors the ../tools env), NOT a check relaxation.
[[tool.basedpyright.executionEnvironments]]
root = "../examples/demo"
extraPaths = ["."]

[tool.pylint.main]
# Match AGENTS.md Python gate: pylint 10.00/10 on the ``aletheia/`` /
# ``tests/`` / ``benchmarks/`` packages (orchestrator runs all three).
# Line length follows PEP 8 Black-ish; existing code uses up to 100 chars.
max-line-length = 100
# Parallelise across all cores — pylint walks 20+ modules on every run.
jobs = 0
# ``tests/`` was promoted into the gate per ``feedback_pylint_10_mandatory.md``;
# ``benchmarks/`` was promoted 2026-05-09 per ``feedback_no_subsumption_asymmetry.md``
# (it shipped with the original 2026-04-12 ``ignore`` for "lint-checked separately"
# rationale that was dropped for ``tests/`` but never re-litigated for ``benchmarks/``).
# Stubs / .venv / build remain ignored because they are vendored or generated.
ignore = ["stubs", ".venv", "build"]
# ``.`` is the source root so pylint resolves ``aletheia.*`` without the
# package being pip-installed (canonical flow is ``pip install -e .[dev]``
# inside ``python/.venv``; this entry keeps the gate working outside it).
source-roots = ["."]
# ``tests/`` isn't a package (no ``__init__.py`` — pytest discovers by
# path), but tests import siblings (``_dbc_helpers``, ``conftest``)
# directly.  pytest adds the test dir to ``sys.path`` automatically;
# pylint needs this ``init-hook`` to do the same.  ``..`` (the repo root) is
# added so tests that import the repo-root ``tools`` package (e.g. the Agda
# open-grammar regression test) resolve it — mirroring the conftest sys.path
# insert and the basedpyright ``tests`` execution environment.
init-hook = 'import sys; sys.path.insert(0, "tests"); sys.path.insert(0, "..")'
# ctypes lacks full stubs; pyright handles the real type checks, so silence
# pylint's redundant no-member/import-error noise for it. Revisit if upstream
# gains complete type stubs — at that point pylint can infer members directly
# and this allow-list becomes dead weight.
extension-pkg-allow-list = ["ctypes"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
# No blanket disables — every suppression in the tree is inline with a
# per-line justification.  This section exists so pylint picks up the
# config file (pylint skips the [tool.pylint.main] section for disables).
disable = []

[tool.pytest.ini_options]
# Single source of truth for the pytest invocation used in CI / AGENTS.md.
# ``testpaths`` avoids collecting the generated ``build/`` tree; strict
# markers/config catches typos in fixtures or xfail reasons at startup.
# ``minversion`` pins the pytest floor so CI fails loudly at startup rather
# than producing subtly-different reports when a dev env drifts.
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
xfail_strict = true
minversion = "7.0"

[tool.coverage.run]
# Coverage config skeleton — pytest-cov is in the ``dev`` extras so this
# block is live whenever developers opt into coverage via
# ``pytest --cov=aletheia``. The release gate in AGENTS.md is test-count-
# based, not coverage-based; these settings stop the tool from counting
# generated/FFI boundary code that isn't meaningfully reachable from tests.
branch = true
source = ["aletheia"]
omit = [
    "aletheia/_install_config.py",
    "aletheia/client/_ffi.py",
]

[tool.coverage.report]
# Show lines that weren't covered so developers can tighten unit tests
# directly; don't fail the build on a coverage threshold (gate-free).
show_missing = true
skip_covered = false

[tool.mutmut]
# AGENTS.md Python cat 14(g) (NEW R18) — mutation testing config.  Hot-path
# modules per AGENTS.md, mapped to the actual on-disk paths after the
# protocols split (``client.py`` -> ``aletheia/client/_client.py``) and the
# Track E.11 IssueCode extraction (``codes/_issue.py`` is new).  ``dbc_loader.py``
# from AGENTS.md was renamed/split into ``dbc/_converter.py`` + ``yaml_loader.py``;
# both included.  See ``docs/MUTATION_BENCH.yaml`` for the canonical list and
# the static gate that enforces it.
#
# Implementation note: mutmut 3.x copies ONLY the files in ``paths_to_mutate``
# plus those in ``also_copy`` to the ``mutants/`` work tree.  Tests run from
# inside that tree, so the whole ``aletheia/`` package needs to be present
# (siblings import each other).  We mutate just the 5 hot-path files via
# ``paths_to_mutate``, and copy the rest of the package via ``also_copy`` so
# every ``from aletheia import ...`` resolves inside ``mutants/``.
paths_to_mutate = [
    "aletheia/client/_client.py",
    "aletheia/dbc/_converter.py",
    "aletheia/yaml_loader.py",
    "aletheia/codes/_issue.py",
    "aletheia/types.py",
]
also_copy = [
    "aletheia",
]
tests_dir = ["tests/"]
# pytest invocation used to verify each mutant: keep cheap by skipping the
# slowest non-mutation gates (the doc-example harness, the random-order lane,
# the property-based hypothesis tests, the cross-binding parity tests — none
# of them exercise the hot-path modules above with finer granularity than the
# unit tests).  Mutmut walks ALL tests in tests_dir by default, so this
# narrowing is via a deselect rather than a select.
pytest_add_cli_args = [
    "--no-header",
    "-x",
    # Tests that fail under mutmut's mutated-tree cwd because they expect
    # repo-root paths (find_repo_root() / ../../docs/FEATURE_MATRIX.yaml /
    # ../../docs/LOG_EVENTS.yaml etc.); they are infrastructure-coverage
    # tests, NOT hot-path coverage, so excluding them does not weaken the
    # mutation lane's signal on the 5 modules above.
    "--ignore=tests/test_doc_examples_harness.py",
    "--ignore=tests/test_property_hypothesis.py",
    "--ignore=tests/test_cross_binding_integration.py",
    "--ignore=tests/test_feature_matrix_parity.py",
    "--ignore=tests/test_log_events_parity.py",
    "--ignore=tests/test_unified_client.py",
    "--ignore=tests/test_format_dbc.py",
]
