# SPDX-FileCopyrightText: 2025 Nicolas Pelletier
# SPDX-License-Identifier: BSD-2-Clause
[package]
name = "aletheia"
version = "2.0.0"
edition = "2021"
description = "Formally verified CAN frame analysis — Rust binding (loads libaletheia-ffi.so at runtime)"
license = "BSD-2-Clause"
repository = "https://github.com/Jaetan/aletheia"
publish = false

[dependencies]
libloading = "0.8"

[lib]
name = "aletheia"
path = "src/lib.rs"
