# SPDX-FileCopyrightText: 2025 Nicolas Pelletier
# SPDX-License-Identifier: BSD-2-Clause
[package]
name = "aletheia"
version = "2.0.0"
edition = "2021"
description = "Formally verified CAN frame analysis — Rust binding (loads libaletheia-ffi.so at runtime)"
license = "BSD-2-Clause"
repository = "https://github.com/Jaetan/aletheia"
publish = false

[dependencies]
libloading = "0.8"
serde_json = "1"

[dev-dependencies]
# YAML reader for the FEATURE_MATRIX parity gate (test-only; never ships).
# yaml-rust2 is the maintained successor to the unmaintained serde_yaml.
yaml-rust2 = "0.10"

[lib]
name = "aletheia"
path = "src/lib.rs"
