# SPDX-FileCopyrightText: 2025 Nicolas Pelletier
# SPDX-License-Identifier: BSD-2-Clause
[package]
name = "aletheia"
version = "3.0.0"
edition = "2021"
description = "Formally verified CAN frame analysis — Rust binding (loads libaletheia-ffi.so at runtime)"
license = "BSD-2-Clause"
repository = "https://github.com/Jaetan/aletheia"
publish = false

[dependencies]
libloading = "0.8"
serde_json = "1"
# YAML check loader — optional, ON by default (disable with --no-default-features).
# Pure-Rust, no native deps; the maintained successor to the unmaintained serde_yaml.
yaml-rust2 = { version = "0.10", optional = true }
# Async client (opt-in `async` feature) — runtime-agnostic: only the `oneshot`
# reply channel, not a runtime. Works under tokio / async-std / smol.
futures-channel = { version = "0.3", optional = true }
# Stream combinators for the lazy async batch send (`send_frames_stream`): only
# `stream::unfold` + the `Stream` trait — combinators, never a runtime, so the
# crate stays runtime-agnostic. `alloc` (no `std`) keeps the surface minimal.
futures-util = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
# Also a dev-dependency so the FEATURE_MATRIX parity gate
# (rust/tests/feature_matrix.rs) can parse YAML even under
# --no-default-features, where the optional runtime dep above is off.
yaml-rust2 = "0.10"
# Drives the async-client tests without committing the crate to a runtime:
# `executor::block_on` (runtime-agnostic) + `future::select`/`ready` to cancel a
# pending call deterministically (no sleeps — tests never wait on physical time).
futures = "0.3"

[features]
default = ["yaml"]
# YAML check loader: load_checks_from_yaml / load_checks_from_yaml_file.
yaml = ["dep:yaml-rust2"]
# Async client: AsyncClient, a runtime-agnostic async mirror of Client.
async = ["dep:futures-channel", "dep:futures-util"]

[lib]
name = "aletheia"
path = "src/lib.rs"
